# python-project-83

./: .env.template  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: linter-check.yml
page_analyzer/: __init__.py  app.py  database.py  parser.py  repository.py
page_analyzer/templates/: base.html  index.html  url_id.html  urls.html
tests/: test_check_repository.py  test_url_repository.py
tests/fixtures/: MockConnection.py
