[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Pineapple_Juice <st.okopnyi@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
validators = "^0.20.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
flake8 = "^6.0.0"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
